@@ -1,6 +1,21 @@
 package otoroshi.ssl
 
-import com.github.blemale.scaffeine.{Cache, Scaffeine}
+import java.io.*
+import java.lang.reflect.{Field, InaccessibleObjectException}
+import java.net.Socket
+import java.nio.ByteBuffer
+import java.nio.charset.StandardCharsets
+import java.nio.charset.StandardCharsets.US_ASCII
+import java.security.*
+import java.security.cert.*
+import java.security.spec.{KeySpec, PKCS8EncodedKeySpec}
+import java.util.concurrent.{Executors, TimeUnit}
+import java.util.concurrent.atomic.{AtomicBoolean, AtomicLong, AtomicReference}
+import java.util.regex.Pattern.CASE_INSENSITIVE
+import java.util.regex.{Matcher, Pattern}
+import java.util.{Base64, Date}
+import otoroshi.actions.{ApiAction, ApiActionContext}
+import com.github.blemale.scaffeine.Scaffeine
 import com.google.common.hash.Hashing
 import com.typesafe.sslconfig.ssl.SSLConfigSettings
 import org.apache.pekko.http.scaladsl.util.FastFuture
@@ -8,7 +23,7 @@ import org.apache.pekko.stream.scaladsl.{Flow, Sink, Source}
 import org.apache.pekko.stream.{Materializer, TLSClientAuth}
 import org.apache.pekko.util.ByteString
 import org.bouncycastle.asn1.x509.{ExtendedKeyUsage, KeyPurposeId}
-import org.bouncycastle.openssl.jcajce.{JcaPEMKeyConverter, JcePEMDecryptorProviderBuilder}
+import org.bouncycastle.openssl.jcajce.{JcaPEMKeyConverter, JceOpenSSLPKCS8DecryptorProviderBuilder, JcePEMDecryptorProviderBuilder}
 import org.bouncycastle.openssl.{PEMEncryptedKeyPair, PEMKeyPair, PEMParser}
 import org.bouncycastle.pkcs.PKCS10CertificationRequest
 import org.joda.time.{DateTime, Interval}
@@ -2248,12 +2263,26 @@ class CustomSSLEngine(delegate: SSLEngine, appProto: Option[String], bannedProto
   }
 
   def setEngineHostName(hostName: String): Unit = {
-    if (DynamicSSLEngineProvider.logger.isDebugEnabled)
-      DynamicSSLEngineProvider.logger.debug(s"Setting current session hostname to $hostName")
-    hostnameHolder.set(hostName)
-    // TODO: add try to avoid future issue ? fixed for now with '--add-opens java.base/javax.net.ssl=ALL-UNNAMED' in the java command line
-    field.set(this, hostName)
-    field.set(delegate, hostName)
+    try {
+      if (DynamicSSLEngineProvider.logger.isDebugEnabled)
+        DynamicSSLEngineProvider.logger.debug(s"Setting current session hostname to $hostName")
+      hostnameHolder.set(hostName)
+      field.set(this, hostName)
+      field.set(delegate, hostName)
+    } catch {
+      case e: InaccessibleObjectException if e.getMessage.contains("Unable to make field private java.lang.String javax.net.ssl.SSLEngine.peerHost accessible: module java.base does not \"opens javax.net.ssl\" to ") =>
+        DynamicSSLEngineProvider.logger.warn(
+          """
+            |It seems that you're trying to use the otoroshi TLS engine without opening the SSL modules.
+            |Please add the following options to your java configuration:
+            |
+            |--add-opens=java.base/javax.net.ssl=ALL-UNNAMED
+            |--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+            |--add-exports=java.base/sun.security.x509=ALL-UNNAMED
+            |--add-opens=java.base/sun.security.ssl=ALL-UNNAMED
+            |""".stripMargin)
+      case e => e.printStackTrace()
+    }
   }
 
   override def getPeerHost: String = Option(hostnameHolder.get()).getOrElse(delegate.getPeerHost)
